--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- Begin Jekyll SEO tag v2.8.0 -->
-<title>Education | Ameer Majeed</title>
+<title>Ameer's Personal Website</title>
 <meta name="generator" content="Jekyll v3.10.0" />
 <meta property="og:title" content="Education" />
 <meta property="og:locale" content="en_US" />
@@ -51,9 +51,10 @@
 
         
 
-        
-        <p class="view"><a href="https://github.com/ameermajeed">View My GitHub Profile</a></p>
-        
+        <p class="view">Email: <a href="ameer.ha.majeed@gmail.com">ameer.ha.majeed@gmail.com</a></p>
+        <p class="view"><a href="https://github.com/ameermajeed">Github</a></p>
+        <p class="view"><a href="https://www.linkedin.com/in/ameer-majeed-a52a57157/">LinkedIn</a></p>
+       
 
         
       </header>
