--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,11 +49,9 @@
 
         <p>Wannabe Computer Scientist / History Freak</p>
 
-        
-
-        <p class="view">Email: <a href="ameer.ha.majeed@gmail.com">ameer.ha.majeed@gmail.com</a></p>
-        <p class="view"><a href="https://github.com/ameermajeed">Github</a></p>
-        <p class="view"><a href="https://www.linkedin.com/in/ameer-majeed-a52a57157/">LinkedIn</a></p>
+        <p class="view">Email: <a href="mailto:ameer.ha.majeed@gmail.com">ameer.ha.majeed@gmail.com</a></p>
+        <p class="view">Github: <a href="https://github.com/ameermajeed">ameermajeed</a></p>
+        <p class="view">LinkedIn<a href="https://www.linkedin.com/in/ameer-majeed-a52a57157/">Ameer Majeed</a></p>
        
 
         
@@ -76,8 +74,10 @@
 <p><strong>Optical Character Recognition for Handwritten Syriac Text:</strong></p>
 <blockquote>
   <p>This project aims to develop an Optical Character Recognition (OCR) model so as to recognize handwritten text of the Syriac language and output them in a digitized format using fine-tuning of the Tesseract-OCR engine’s pre-trained model on handwritten data.
-<strong>KHAMIS East Syriac Sentence Dataset:</strong> 
-N/A</p>
+</p>
+</blockquote>
+<p><strong>KHAMIS East Syriac Sentence Dataset:</strong></p>
+<blockquote><p>N/A</p>
 </blockquote>
 
 <h2 id="publications">Publications</h2>
