--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,9 @@
 
         <p class="view">Email: <a href="mailto:ameer.ha.majeed@gmail.com">ameer.ha.majeed@gmail.com</a></p>
         <p class="view">Github: <a href="https://github.com/ameermajeed">ameermajeed</a></p>
-        <p class="view">LinkedIn<a href="https://www.linkedin.com/in/ameer-majeed-a52a57157/">Ameer Majeed</a></p>
+        <p class="view">LinkedIn: <a href="https://www.linkedin.com/in/ameer-majeed-a52a57157/">Ameer Majeed</a></p>
+
+        <br>
        
 
         
