--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,16 +47,13 @@
           <img src="/image.png" alt="Logo" />
         
 
-        <p>Wannabe Computer Scientist / History Freak</p>
+        <p style="">Wannabe Computer Scientist / History Freak</p>
 
         <p class="view">Email: <a href="mailto:ameer.ha.majeed@gmail.com">ameer.ha.majeed@gmail.com</a></p>
         <p class="view">Github: <a href="https://github.com/ameermajeed">ameermajeed</a></p>
         <p class="view">LinkedIn: <a href="https://www.linkedin.com/in/ameer-majeed-a52a57157/">Ameer Majeed</a></p>
 
-        <br>
-       
-
-        
+  
       </header>
       <section>
 
@@ -153,10 +150,6 @@
 
 
       </section>
-      <footer>
-        
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
     <script src="/assets/js/scale.fix.js"></script>
   </body>
