--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
           <img src="/image.png" alt="Logo" />
         
 
-        <p style="">Wannabe Computer Scientist / History Freak</p>
+        <p style="">Artificial Intelligence & Digital Humanities</p>
 
         <p class="view">Email: <a href="mailto:ameer.ha.majeed@gmail.com">ameer.ha.majeed@gmail.com</a></p>
         <p class="view">Github: <a href="https://github.com/ameermajeed">ameermajeed</a></p>
@@ -75,14 +75,14 @@
   <p>This project aims to develop an Optical Character Recognition (OCR) model so as to recognize handwritten text of the Syriac language and output them in a digitized format using fine-tuning of the Tesseract-OCR engine’s pre-trained model on handwritten data.
 </p>
 </blockquote>
-<p><strong>KHAMIS East Syriac Sentence Dataset:</strong></p>
-<blockquote><p>N/A</p>
-</blockquote>
 
 <h2 id="publications">Publications</h2>
+<p><strong>Ancient but Digitized: Developing Handwritten Optical Character Recognition for East Syriac Script Through Creating KHAMIS Dataset:</strong></p>
 <blockquote>
-  <p>N/A</p>
+  Author(s): Ameer Majeed, Hossein Hassani
 </blockquote>
+<p><a href="https://arxiv.org/abs/2408.13631">Pre-print on arXiv</a></p>
+
 
 <h2 id="skills">Skills</h2>
 <h3 id="programming-languages">Programming Languages:</h3>
