--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,9 +78,7 @@
 
 <h2 id="publications">Publications</h2>
 <p><strong>Ancient but Digitized: Developing Handwritten Optical Character Recognition for East Syriac Script Through Creating KHAMIS Dataset:</strong></p>
-<blockquote>
-  Author(s): Ameer Majeed, Hossein Hassani
-</blockquote>
+<em>Author(s): Ameer Majeed, Hossein Hassani</em>
 <p><a href="https://arxiv.org/abs/2408.13631">Pre-print on arXiv</a></p>
 
 
